--- a/coach2.0/team_selection.ipynb
+++ b/coach2.0/team_selection.ipynb
@@ -155,35 +155,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team Score:\t842.4095749652935\n",
-      "goal\tMarc-Andre ter Stegen\n",
-      "defender\tGerard Pique\n",
-      "defender\tJeremy Mathieu\n",
-      "defender\tJordi Alba\n",
-      "defender\tSamuel Umtiti\n",
-      "midfield\tLionel Messi\n",
-      "midfield\tAndres Iniesta\n",
-      "midfield\tArda Turan\n",
-      "midfield\tIvan Rakitic\n",
-      "attacker\tLuis Suarez\n",
-      "attacker\tNeymar\n"
+      "'4-4-2':\n",
+      "'Team Score':810.5827234677516,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'defender':'Jonas Hector',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'midfield':'Thomas Mueller',\n",
+      "'attacker':'Mario Gomez',\n",
+      "'attacker':'Timo Werner',\n",
+      "'5-3-2':\n",
+      "'Team Score':798.8886820932428,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'defender':'Jonas Hector',\n",
+      "'defender':'Marvin Plattenhardt',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'attacker':'Mario Gomez',\n",
+      "'attacker':'Timo Werner',\n",
+      "'3-5-2':\n",
+      "'Team Score':820.4556756649184,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'midfield':'Thomas Mueller',\n",
+      "'midfield':'Ilkay Guendogan',\n",
+      "'attacker':'Mario Gomez',\n",
+      "'attacker':'Timo Werner',\n",
+      "'4-5-1':\n",
+      "'Team Score':823.5926845576207,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'defender':'Jonas Hector',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'midfield':'Thomas Mueller',\n",
+      "'midfield':'Ilkay Guendogan',\n",
+      "'attacker':'Mario Gomez',\n",
+      "'5-4-1':\n",
+      "'Team Score':812.6434458418819,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'defender':'Jonas Hector',\n",
+      "'defender':'Marvin Plattenhardt',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'midfield':'Thomas Mueller',\n",
+      "'attacker':'Mario Gomez',\n"
      ]
     }
    ],
    "source": [
-    "tactic = '4-4-2'\n",
-    "team_score, lineup, players_name, team = \\\n",
-    "        get_roster(barcelona, tactic, np.ones(23))\n",
-    "print(\"Team Score:\\t{}\".format(team_score))\n",
-    "for pos, name in zip(lineup, players_name):\n",
-    "    print(\"{}\\t{}\".format(pos, name))"
+    "tac = ['4-4-2', '5-3-2', '3-5-2', '4-5-1', '5-4-1']\n",
+    "for tactic in tac:\n",
+    "    print(\"'{}':\".format(tactic))\n",
+    "    team_score, lineup, players_name, team = \\\n",
+    "            get_roster(germany_list, tactic, np.ones(23))\n",
+    "    print(\"{'Team Score':{},\".format(team_score))\n",
+    "    for pos, name in zip(lineup, players_name):\n",
+    "        print(\"'{}':'{}',\".format(pos, name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VARIANT = {'4-4-2':\n",
+    "{'Team Score':810.5827234677516,\n",
+    "'goal':['Manuel Neuer'],\n",
+    "'defender':['Mats Hummels','Jerome Boateng','Matthias Ginter','Jonas Hector'],\n",
+    "'midfield':['Mesut Oezil','Marco Reus','Toni Kroos','Thomas Mueller'],\n",
+    "'attacker':['Mario Gomez','Timo Werner']},\n",
+    "'5-3-2':\n",
+    "{'Team Score':798.8886820932428,\n",
+    "'goal':['Manuel Neuer'],\n",
+    "'defender':['Mats Hummels','Jerome Boateng','Matthias Ginter','Jonas Hector','Marvin Plattenhardt'],\n",
+    "'midfield':['Mesut Oezil','Marco Reus','Toni Kroos'],\n",
+    "'attacker':['Mario Gomez','Timo Werner']},\n",
+    "'3-5-2':\n",
+    "{'Team Score':820.4556756649184,\n",
+    "'goal':['Manuel Neuer'],\n",
+    "'defender':['Mats Hummels','Jerome Boateng','Matthias Ginter'],\n",
+    "'midfield':['Mesut Oezil','Marco Reus','Toni Kroos','Thomas Mueller','Ilkay Guendogan'],\n",
+    "'attacker':['Mario Gomez','Timo Werner']},\n",
+    "'4-5-1':\n",
+    "{'Team Score':823.5926845576207,\n",
+    "'goal':['Manuel Neuer'],\n",
+    "'defender':['Mats Hummels','Jerome Boateng','Matthias Ginter','Jonas Hector'],\n",
+    "'midfield':['Mesut Oezil','Marco Reus','Toni Kroos','Thomas Mueller','Ilkay Guendogan'],\n",
+    "'attacker':['Mario Gomez']},\n",
+    "'5-4-1':\n",
+    "{'Team Score':812.6434458418819,\n",
+    "'goal':['Manuel Neuer'],\n",
+    "'defender':['Mats Hummels','Jerome Boateng','Matthias Ginter','Jonas Hector','Marvin Plattenhardt'],\n",
+    "'midfield':['Mesut Oezil','Marco Reus','Toni Kroos','Thomas Mueller'],\n",
+    "'attacker':['Mario Gomez']}}"
    ]
   },
   {
@@ -206,6 +299,23 @@
     "    res = cur.fetchall()\n",
     "    for info in res:\n",
     "        print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Team Score': 810.5827234677516, 'goal': ['Manuel Neuer'], 'defender': ['Mats Hummels', 'Jerome Boateng', 'Matthias Ginter', 'Jonas Hector'], 'midfield': ['Mesut Oezil', 'Marco Reus', 'Toni Kroos', 'Thomas Mueller'], 'attacker': ['Mario Gomez', 'Timo Werner']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(VARIANT['4-4-2'])"
    ]
   }
  ],
