individual_player_score

--- a/coach2.0/team_selection.ipynb
+++ b/coach2.0/team_selection.ipynb
@@ -281,41 +281,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('goal_keeper',)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with sqlite3.connect(FILENAME) as con:\n",
     "    cur = con.cursor()\n",
     "    cur.execute(\"\"\"SELECT position FROM player WHERE player_name LIKE \"sergio romero\";\"\"\")\n",
     "    res = cur.fetchall()\n",
     "    for info in res:\n",
-    "        print(info)"
+    "        pass\n",
+    "#         print(info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sqlite3.connect(FILENAME) as con:\n",
+    "    cur = con.cursor()\n",
+    "    cur.execute(\"\"\"SELECT * FROM player WHERE \n",
+    "    player_name LIKE \"diego%\";\"\"\")\n",
+    "    res = cur.fetchall()\n",
+    "    for info in res:\n",
+    "        pass\n",
+    "#         print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DENMARK = ['Kasper Schmeichel', 'Jonas Loessl', 'Jannik Vestergaard',\n",
+    "           'Simon Kjaer', 'Andreas Christensen', 'Mathias Joergensen',\n",
+    "           'Henrik Dalsgaard', 'Michael Krohn-Dehli', 'Christian Eriksen',\n",
+    "           'Viktor Fischer', 'Lasse Schoene', 'Nicolai Joergensen', \n",
+    "            'Martin Braithwaite', ]\n",
+    "\n",
+    "SPAIN = ['David De Gea', 'Pepe Reina', 'Daniel Carvajal', 'Gerard Pique',\n",
+    "         'Nacho Fernandez', 'Cesar Azpilicueta', 'Sergio Ramos', \n",
+    "         'Nacho Monreal', 'Jordi Alba', 'Sergio Busquets', 'Andres Iniesta',\n",
+    "         'Saul Niguez', 'Koke', 'Thiago Alcantara', 'Lucas Vazquez', \n",
+    "          'Marco Asensio', 'David Silva', 'Isco', 'Iago Aspas', 'Diego Costa']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Team Score': 810.5827234677516, 'goal': ['Manuel Neuer'], 'defender': ['Mats Hummels', 'Jerome Boateng', 'Matthias Ginter', 'Jonas Hector'], 'midfield': ['Mesut Oezil', 'Marco Reus', 'Toni Kroos', 'Thomas Mueller'], 'attacker': ['Mario Gomez', 'Timo Werner']}\n"
+      "'4-4-2':\n",
+      "'Team Score':809.5064369491796,\n",
+      "'goal':'Manuel Neuer',\n",
+      "'defender':'Mats Hummels',\n",
+      "'defender':'Jerome Boateng',\n",
+      "'defender':'Matthias Ginter',\n",
+      "'defender':'Marvin Plattenhardt',\n",
+      "'midfield':'Mesut Oezil',\n",
+      "'midfield':'Marco Reus',\n",
+      "'midfield':'Toni Kroos',\n",
+      "'midfield':'Thomas Mueller',\n",
+      "'attacker':'Mario Gomez',\n",
+      "'attacker':'Timo Werner',\n",
+      "{'Manuel Neuer': ('goal', 73.72688527141379), 'Marc-Andre ter Stegen': ('goal', 65.80473514582609), 'Kevin Trapp': ('goal', 63.317860959181814), 'Jerome Boateng': ('defender', 70.76159284372727), 'Matthias Ginter': ('defender', 68.57814805683871), 'Jonas Hector': ('attacker', 62.97470535026667), 'Mats Hummels': ('defender', 73.15516888346667), 'Joshua Kimmich': ('midfield', 64.57963551715001), 'Marvin Plattenhardt': ('defender', 66.39788165759461), 'Antonio Ruediger': ('defender', 61.90924767606896), 'Niklas Suele': ('defender', 53.22340500725), 'Julian Brandt': ('midfield', 64.21694889736843), 'Julian Draxler': ('midfield', 76.18227411643335), 'Leon Goretzka': ('midfield', 67.64580257943334), 'Ilkay Guendogan': ('midfield', 77.34712037333334), 'Sami Khedira': ('midfield', 72.90070522837931), 'Toni Kroos': ('midfield', 79.70685335968965), 'Mesut Oezil': ('midfield', 80.49588355125806), 'Sebastian Rudy': ('midfield', 70.90722495792308), 'Mario Gomez': ('attacker', 73.99206291464706), 'Thomas Mueller': ('midfield', 78.09192303210344), 'Marco Reus': ('midfield', 80.26287809497619), 'Timo Werner': ('attacker', 64.33715928346429)}\n"
      ]
     }
    ],
    "source": [
-    "print(VARIANT['4-4-2'])"
+    "tac = ['4-4-2']#, '5-3-2', '3-5-2', '4-5-1', '5-4-1']\n",
+    "for tactic in tac:\n",
+    "    print(\"'{}':\".format(tactic))\n",
+    "    team_score, lineup, players_name, team = get_roster(germany_list, tactic, np.ones(23))\n",
+    "    print(\"'Team Score':{},\".format(team_score))\n",
+    "    for pos, name in zip(lineup, players_name):\n",
+    "        print(\"'{}':'{}',\".format(pos, name))\n",
+    "print(team)"
    ]
   }
  ],
